[package]
name = "coop_heap"
version = "0.1.1"
edition = "2021"
authors =["Peter Kehl <peter.kehl@gmail.com>"]
description = "Reserved. Heap cooperation for **safe** applications & libraries. See https://github.com/coop-rs/co_heap instead."
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/coop-rs/coop_heap"
# See also: https://crates.io/category_slugs
# TODO maybe: caching??
categories = ["data-structures", "memory-management", "no-std",  "rust-patterns"]
# See also: https://crates.io/keywords
keywords = ["memory", "heap", "no_std", "no-std", "vector"]
homepage = "https://github.com/coop-rs/coop_heap"
# Do include everything from under src/ and tests/, in case we add local README.md file(s).
include = ["src/**/*",  "tests/**/src", "Cargo.toml", "tests/**/Cargo.toml", "tests/**/Cargo.lock",  "LICENSE*", "LICENSES/*", "README.md"]
rust-version = "1.56" # Rust 1.56 is the oldest in 2021 edition

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
